2012-03-18  Dirk Eddelbuettel  <edd@debian.org>

	* R/pfLineartBS.R: Adjust naming of the two helper functions
	* man/pfLineartBS.Rd: Idem

2012-03-18 Adam Johansen <a.m.johansen@warwick.ac.uk>

	* src/pfEx.cpp renamed to pflineartbs.cpp
	* inst/include/pffuncs.h renamed to pflineartbs.h
	* R/pfEx.R renamed to pfLineartBS.R
	* man/pfEx.Rd renamed to pfLineartBS.Rd

	* R/bspfGaussianOptimal.R tweaked & standardised plotting.
	* R/pfNonlinBS.R fixed plotting bug.

	* deprecated/ moved all rareEvents files here.

2012-03-17  Adam Johansen <a.m.johansen@warwick.ac.uk>

	* man/pfEx.Rd updated to reflect previous changes.

	* NAMESPACE removed rareEvents
	* src/rareEvents.cpp moved to src/rareEvents.
	* src/simfunctions.cpp idem.
	* inst/include/simfunctions.h moved to inst/include/rareEvents.
	* inst/include/markovchains idem
	* man/rareEventsEx.Rd moved to man/rareEvents.
	* R/rareEventsEx.R moved to R/rareEvents.

2012-03-16  Dirk Eddelbuettel  <edd@dexter>

	* src/pf.cpp:
	  - Changed to get example data from R and pass to vector of cv_obs
	  - Added optional plotting callback to visualize estimation progress
	* R/pfEx.R:
	  - Added a helper func. to read data, restructured pfEx()
	  - Support optional plotting callback; provided sample function
	* man/pfEx.Rd: Updated accordingly

2012-03-16  Adam Johansen <a.m.johansen@warwick.ac.uk>

	* NAMESPACE: Added pfNonlinBS.
	* src/pfnonlinbS.cpp: Bootstrap particle nonlinear particle filter
	example.
	* inst/include/pfnonlinbs.h: Header for the same.
	* R/pfNonlinBS.R: Minimal wrapper and output for the same.
	* man/pfNonlinBS.Rd: Minimal documentation for the same.

2012-03-15  Dirk Eddelbuettel  <edd@debian.org>

	* src/pf.cpp: Another new/delete cleanup

2012-03-15  Adam Johansen <a.m.johansen@warwick.ac.uk>

	* Standardized file extensions .h and .cpp
	* src/blockpfgaussianoptfuncs.cpp merged into
	src/blockpfgaussianopt.cpp.
	* src/pffuncs.cpp merged into src/pf.cpp.

2012-03-13  Dirk Eddelbuettel  <edd@debian.org>
