@@ -1,6 +1,7 @@
 \name{pfLineartBS}
 \alias{pfLineartBS}
 \alias{pfLineartBSOnlinePlot}
+\alias{simLineart}
 \title{Particle Filter Example}
 \description{
   The \code{pfLineartBS} function provides a simple example for
@@ -10,11 +11,14 @@
 
   The \code{pfLineartBSOnlinePlot} function provides a simple default
   \sQuote{online} plotting function that is invoked during the
-  estimation process. 
+  estimation process.
+
+  The \code{simLineart} function simulates data from the model. 
 }
 \usage{
   pfLineartBS(data, particles=1000, plot=FALSE, onlinePlot) 
   pfLineartBSOnlinePlot(xm, ym)
+  simLineart(len)
 }
 \arguments{
   \item{data}{A two-column matrix or dataframe containing x and y
@@ -28,18 +32,24 @@
   pfExOnlinePlot for a simple example.}
   \item{xm}{Vector with x position.}
   \item{ym}{Vector with y position.}
+  \item{len}{Length of sequence to simulate}
 }
 \value{
-  The function returns a \code{data.frame} containing as many rows as in
+  The \code{pfLineartBS} function returns a \code{data.frame} containing as many rows as in
   the input data, and four columns corresponding to the estimated \eqn{x}{x} and
-  \eqn{y}{y} coordinates as well as the estimated velocity in these two directions.
+  \eqn{y}{y} coordinates as well as the estimated velocity in these two
+  directions.
+
+  The \code{simLineart} function returns a list containing the vector of
+  states and the associated vector of observations.
 }
 \details{
   The \code{pfLineartBS} function provides a simple example for
   \pkg{RcppSMC}. The model is linear with t-distributed innovations.
   It is based on the \code{pf} example in the
   \code{SMCTC} library, and discussed in the Section 5.1 of his
-  corresponding paper (Johansen, 2009).
+  corresponding paper (Johansen, 2009).   \code{simLineart} simulates from the
+  model. 
 
   Using the simple \code{pfExOnlinePlot} function illustrates how
   callbacks into R, for example for plotting,  can be made during the
