@@ -1,14 +1,18 @@
 \name{pfNonlinBS}
 \alias{pfNonlinBS}
+\alias{simNonlin}
 \title{Nonlinear Bootstrap Particle Filter (Univariate Non-Linear State Space Model)}
 \description{
   The \code{pfNonlinBS} function provides a simple example for
   \pkg{RcppSMC}. It is a simple \dQuote{bootstrap} particle filter which employs
   multinomial resampling after each iteration applied to the ubiquitous "nonlinear
   state space model" following Gordon, Salmond and Smith (1993).
+
+  The \code{simNonlin} function simulates data from the associated model.
 }
 \usage{
   pfNonlinBS(data, particles=500, plot=FALSE) 
+  simNonlin(len)
 }
 \arguments{
   \item{data}{A vector variable containing the sequence of observations.}
@@ -16,10 +20,13 @@
   \item{plot}{A boolean variable describing whether a plot should
     illustrate the (posterior mean) estimated path along with one and two
     standard deviation intervals.} 
+  \item{len}{The length of data sequence to simulate.}
 }
 \value{
-  The function returns two vectors, the first containing the posterior
+  The \code{pfNonlinBS} function returns two vectors, the first containing the posterior
   filtering means; the second the posterior filtering standard deviations.
+
+  The \code{simNonlin} function returns a list containing the state and data sequences. 
 }
 \details{
   The \code{pfNonlinbs} function provides a simple example for
@@ -31,6 +38,8 @@
   variables of variances 10.0 and 1.0, respectively. A boostrap proposal
   (i.e. sampling from the state equation) is used, together with multinomial
   resampling after each iteration. 
+
+  The \code{simNonlin} function simulates from the same model.
 }
 \references{
   N. J. Gordon, S. J. Salmond, and A. F. M. Smith. Novel approach to
@@ -38,9 +47,8 @@
   140(2):107-113, April 1993.	
 }
 \examples{
-\dontrun{
-  res <- pfNonlinBS(data,particles=500,plot=TRUE)
-}
+  sim <- simNonlin(len=50)
+  res <- pfNonlinBS(sim$data,particles=500,plot=TRUE)
 }
 \author{Adam M. Johansen}
 \keyword{programming}
